  See http://oss.software.ibm.com/icu/docs/papers/forms_of_unicode/#t2.
  UTF-8Y files are automatically detected, just like UTF-16.

- Removed File->Insert File command. As before, you can still invoke
  File->Open and select "Insert" from a file's right-click menu in the
  file system browser.

- Added "Display Actions" macro (Lee Turner).

}}}
{{{ Syntax Highlighting

- Added MoinMoin syntax highlighting (Ollie Rutherfurd).

- Added Relax NG compact syntax highlighting (Randy Hudson).

- Minor fix to Perl heredoc syntax highlighting (Chris Petersen).

- Updated ADPL syntax highlighting (Randolf Mock)

- Added Renderman-RIB syntax highlighting (Alessandro Falappa).

- Added PowerDynamo syntax highlighting (Ben Williams).

- Added WebSphere MQ scripting syntax highlighting (Aaron Bell).

- Added squid.conf syntax highlighting (Kris Kopicki).

}}}
{{{ Platform Specific

- MacOS plugin now supports services (Kris Kopicki).

}}}
{{{ Bug Fixes

- Fixed NullPointerException on startup which prevented jEdit from
  loading if a corrupted JAR file was present in one of the jars
  directories.

- Dropping a file onto the text area did not work if the text area was
  read-only.

- On Windows, MiscUtilities.constructPath() would fail if the parent
  path was a URL and the child path started with a \.

- On Windows, MiscUtilities.constructPath() would return a path with a
  double backslash if the parent used / as a separator, and ended with a
  /.

- UTF16 files with a byte order mark were not being detected due to a
  regression in pre6.

- The history code now tries very hard not to write a malformed
  ~/.jedit/history file.

- Fixed a slowdown of 5-7 seconds on startup in some cases that results
  from calling GraphicsDevice.getConfigurations().

- The list of words in the "Complete Word" window was not sorted.

- Fixed a race condition where the text area would throw a
  NullPointerException if EditPane.setBuffer() was called twice in a row